--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
